<resources>
    <!-- Appname -->
    <string name="app_name">Multi Purpose App</string>
    <string name="app_name_abb">MPA</string>

    <!-- Hauptmenü -->
    <string name="menu">Menü</string>

    <!-- Funktionen -->
    <string name="func_gamble">Münze/Würfel</string>
    <string name="func_dice">Würfel</string>
    <string name="func_coin">Münze</string>
    <string name="func_coinflip">Münzwurf</string>
    <string name="func_notes">Notizen</string>
    <string name="func_random">Zufallszahl</string>
    <string name="func_stop">Stoppuhr</string>
    <string name="func_todo">To-Do</string>
    <string name="func_study">Lernkarten</string>
    <string name="func_start">Start</string>

    <!-- Navigation -->
    <string name="text_label_back">Back</string>
    <string name="text_label_home">Home</string>
    <string name="text_label_navigation">Navigation</string>
    <string name="label_nav_bar">Bottom Navigation</string>
    <string name="title_activity_gamble">Gamble</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Notizen -->
    <string name="func_new_note">Neue Notiz</string>

    <!-- Zufallszahl -->
    <string name="random_start">Von:</string>
    <string name="random_startVal">1</string>
    <string name="random_end">Bis:</string>
    <string name="random_endVal">10</string>
    <string name="random_result">Ergebnis:</string>

    <!-- Stoppuhr -->
    <string name="stop_time">00:00.00</string>
    <string name="stop_round">Runde</string>

    <!-- To-Do -->
    <string name="todo_new_list">Neue Liste</string>
    <string name="todo_add_list">Liste speichern</string>

    <!-- Lernkarten -->
    <string name="study_new_collection">Neue Sammlung</string>
    <string name="study_edit_collection">Bearbeiten</string>
    <string name="study_learn_collection">Lernen</string>
    <string name="study_new_card">Neue Karte</string>
    <string name="study_answer">Antwort</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>