<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bg_Main"
    tools:context=".Random">

    <!-- Header -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="@string/func_random"
        android:textColor="@color/Main_Header"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Von Angabe -->
    <LinearLayout
        android:id="@+id/randomStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/border"
        android:clickable="false"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/guidelineHeader"
        app:layout_constraintStart_toStartOf="@id/guidelineColOne"
        app:layout_constraintEnd_toEndOf="@id/guidelineColFour">

        <TextView
            android:minWidth="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="@font/questrial"
            android:text="@string/random_start"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/randomStartValue"
            android:minHeight="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/questrial"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:hint="@string/random_startVal"
            android:textSize="20sp"/>

    </LinearLayout>

    <!-- Bis Angabe -->
    <LinearLayout
        android:id="@+id/randomEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/border"
        android:clickable="false"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/guidelineRangeMid"
        app:layout_constraintStart_toStartOf="@id/guidelineColOne"
        app:layout_constraintEnd_toEndOf="@id/guidelineColFour">

        <TextView
            android:minWidth="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="@font/questrial"
            android:text="@string/random_end"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/randomEndValue"
            android:minHeight="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:padding="5dp"
            android:fontFamily="@font/questrial"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:hint="@string/random_endVal"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/randomResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/border"
        android:clickable="false"
        android:descendantFocusability="blocksDescendants"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/guidelineResult"
        app:layout_constraintStart_toStartOf="@id/guidelineColOne"
        app:layout_constraintEnd_toEndOf="@id/guidelineColFour">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="@font/questrial"
            android:text="@string/random_result"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/randomResultValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="5dp"
            android:fontFamily="@font/questrial"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>

    <!-- Startbutton -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/func_start"
        android:fontFamily="@font/questrial"
        android:textColor="@color/Sub_Header"
        app:backgroundTint="@color/Bg_Card"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/guidelineColThree"
        app:layout_constraintStart_toStartOf="@id/guidelineColTwo"
        app:layout_constraintTop_toBottomOf="@+id/guidelineStart"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />




    <!-- Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/Bg_Card"
        android:backgroundTint="@color/Bg_Card"
        android:clickable="true"
        android:contentDescription="@string/label_nav_bar"
        android:focusable="true"
        app:itemIconTint="@color/Main_Header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineNav"
        app:menu="@menu/my_navigation_items" />

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRangeMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineNav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>