<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bg_Main"
    tools:context=".Stop">

    <!-- Header -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="@string/func_stop"
        android:textColor="@color/Main_Header"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Zeitangabe -->

        <TextView
            android:id="@+id/stopTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/border"
            android:fontFamily="@font/questrial"
            android:text="@string/stop_time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/guidelineHeader"
            app:layout_constraintStart_toStartOf="@id/guidelineColOne"
            app:layout_constraintEnd_toEndOf="@id/guidelineColFour"/>

    <!-- Container Runden -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/func_notes"
        app:layout_constraintBottom_toTopOf="@id/guidelineRoundEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineRound">

        <LinearLayout
            android:id="@+id/containerNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

    <!-- Roundbutton -->
    <Button
        android:id="@+id/btnRound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_round"
        android:fontFamily="@font/questrial"
        android:textColor="@color/Sub_Header"
        app:backgroundTint="@color/Bg_Card"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/guidelineColTwo"
        app:layout_constraintStart_toStartOf="@id/guidelineColOne"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButtonEnd"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <!-- Startbutton -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/func_start"
        android:fontFamily="@font/questrial"
        android:textColor="@color/Sub_Header"
        app:backgroundTint="@color/Bg_Card"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/guidelineColFour"
        app:layout_constraintStart_toStartOf="@id/guidelineColThree"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButtonEnd"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <!-- Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Bg_Card"
        android:backgroundTint="@color/Bg_Card"
        android:clickable="true"
        android:contentDescription="@string/label_nav_bar"
        android:focusable="true"
        app:itemIconTint="@color/Main_Header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/my_navigation_items" />

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRoundEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>