<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bg_Main"
    tools:context=".MainActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/func_coinflip"
        android:fontFamily="@font/questrial"
        android:textColor="@color/Main_Header"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Münze -->
    <LinearLayout
        android:id="@+id/coin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:clickable="false"
        android:descendantFocusability="blocksDescendants"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDice"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHeader"
        app:layout_constraintStart_toStartOf="@id/guidelineColOne"
        app:layout_constraintEnd_toStartOf="@id/guidelineColFour">

        <ImageView
            android:id="@+id/iVCoin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:contentDescription="@string/func_dice"
            android:src="@drawable/ic_muenze" />

    </LinearLayout>

    <!-- Startbutton -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/func_start"
        android:fontFamily="@font/questrial"
        android:textColor="@color/Sub_Header"
        app:backgroundTint="@color/Bg_Card"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@id/guidelineColThree"
        app:layout_constraintStart_toStartOf="@id/guidelineColTwo"
        app:layout_constraintTop_toBottomOf="@+id/guidelineStart"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <!-- Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Bg_Card"
        android:backgroundTint="@color/Bg_Card"
        android:clickable="true"
        android:contentDescription="@string/label_nav_bar"
        android:focusable="true"
        app:itemIconTint="@color/Main_Header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/my_navigation_items" />


    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>