<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Bg_Main"
    tools:context=".MainActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/questrial"
        android:text="@string/func_gamble"
        android:textColor="@color/Main_Header"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Buttons -->
    <!-- Würfel -->
    <LinearLayout
        android:id="@+id/btnDice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDiceBot"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHeader"
        app:layout_constraintStart_toStartOf="@id/guidelineColOne"
        app:layout_constraintEnd_toStartOf="@id/guidelineColTwo">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial"
            android:gravity="center|bottom"
            android:paddingTop="15dp"
            android:text="@string/func_dice"
            android:textColor="@color/Sub_Header"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:contentDescription="@string/func_dice"
            android:src="@drawable/ic_dice" />

    </LinearLayout>

    <!-- Münzwurf -->
    <LinearLayout
        android:id="@+id/btnCoin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCoinBot"
        app:layout_constraintTop_toBottomOf="@+id/guidelineMid"
        app:layout_constraintStart_toStartOf="@id/guidelineColOne"
        app:layout_constraintEnd_toStartOf="@id/guidelineColTwo">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/questrial"
            android:gravity="center|bottom"
            android:paddingTop="15dp"
            android:text="@string/func_coin"
            android:textColor="@color/Sub_Header"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:contentDescription="@string/func_coin"
            android:src="@drawable/ic_muenze" />

    </LinearLayout>

    <!-- Navigation Bar -->


    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDiceBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCoinBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineColTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

</androidx.constraintlayout.widget.ConstraintLayout>